Add more show planning